# aim323_build_agents_with_bedrock_oss

./: .gitignore  01_usecase_introduction.ipynb  02_travel_planner_with_langgraph.ipynb  03_travel_agent_with_tools.ipynb  04_travel_booking_multi_agent.ipynb  05_Optional_find_dream_destination_with_crewaI.ipynb  05_find_dream_destination_with_crewaI.ipynb  06_agent_evaluation_with_ragas.ipynb  DO_NOT_RUN.ipynb  README.md  utils.py
bedrock-multi-agent-langgraph-studio/: .gitignore  Dockerfile  README.md  app.py  docker-compose-setup.md  docker-compose.yml  graphui.py  langgraph.json  pyproject.toml  runner.py  windmill_script.py
bedrock-multi-agent-langgraph-studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
bedrock-multi-agent-langgraph-studio/src/destination_agent/: __init__.py  graph.py  tools.py
bedrock-multi-agent-langgraph-studio/src/flight_agent/: __init__.py  graph.py  tools.py
bedrock-multi-agent-langgraph-studio/src/hotel_agent/: __init__.py  graph.py  tools.py
bedrock-multi-agent-langgraph-studio/src/supervisor_agent/: __init__.py  graph.py
