[project]
name = "langgraph-studio-multi-agent"
version = "0.1.0"
description = "Multi agent sample with Amazon Bedrock and Langgraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.87",
    "langchain-aws>=0.2.10",
    "langgraph-cli[inmem]>=0.1.65",
    "langgraph>=0.2.60",
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flight_agent", "hotel_agent", "supervisor_agent", "destination_agent"]
[tool.setuptools.package-dir]
"flight_agent" = "src/flight_agent"
"hotel_agent" = "src/hotel_agent"
"supervisor_agent" = "src/supervisor_agent"
"destination_agent" = "src/destination_agent"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.pytest.ini_options]
pythonpath = [
  "src"
]